// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content matches snapshot 1`] = `
Array [
  .c0 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  margin: 0;
  position: absolute;
  left: 0;
  top: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  -webkit-clip: auto;
  clip: auto;
  height: auto;
  width: auto;
  z-index: 20;
}

<a
    className="c0"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 5rem;
  max-width: 117rem;
  background: #fff;
  margin: 0 auto;
}

.c2 {
  width: auto;
  height: 3rem;
}

.c3 {
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Helvetica Neue;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  color: #5E6062;
  padding: 1rem 0;
  height: 5rem;
  overflow: visible;
}

.c3:hover,
.c3:active,
.c3:focus {
  border-bottom: 0.4rem solid #63a524;
}

.c0 {
  padding: 0 13.5rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

@media (max-width:48em) {
  .c1 {
    height: 3.6rem;
  }
}

@media (max-width:48em) {
  .c2 {
    height: 2rem;
  }
}

@media (max-width:48em) {
  .c3 {
    font-size: 1.6rem;
    line-height: 1.6rem;
  }
}

@media (max-width:48em) {
  .c3 {
    height: 3.6rem;
  }
}

@media (max-width:48em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <a
        className=""
        href="/"
      >
        <img
          alt="OpenStax Logo"
          className="c2"
          src="logo.svg"
        />
      </a>
      <a
        className="c3"
        href="https://accounts-dev.openstax.org/login"
      >
        Login
      </a>
    </div>
  </div>,
  .c0 {
  z-index: 2;
  top: 0;
  overflow: visible;
}

@media (max-width:600px) {
  .c0 {
    position: -webkit-sticky;
    position: sticky;
  }
}

@media (min-width:601px) {
  .c0 {
    position: fixed;
    right: 0;
  }
}

<div
    className="c0"
  />,
  .c4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c3 {
  height: 2rem;
  width: 2rem;
  color: #fff;
  margin-right: 0.7rem;
}

.c1 {
  width: 100%;
  max-width: 117rem;
  margin: 0 auto;
  text-align: left;
}

.c2 {
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  max-width: 87rem;
  text-overflow: ellipsis;
  margin: 0;
}

.c5 {
  font-size: 2.4rem;
  line-height: 3rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  color: #fff;
  font-weight: bold;
  display: inline-block;
  width: 100%;
  max-width: 87rem;
  margin-top: 1rem;
  margin-bottom: 0;
  overflow: hidden;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

.c0 {
  padding: 0 13.5rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 13rem;
  background: linear-gradient(to right,#002468,#003DB1);
}

@media (max-width:48em) {
  .c2 {
    font-size: 1.6rem;
    line-height: 1.6rem;
  }
}

@media (max-width:48em) {
  .c2 {
    line-height: 2.5rem;
  }
}

@media (max-width:48em) {
  .c5 {
    font-size: 1.6rem;
  }
}

@media (max-width:48em) {
  .c5 {
    line-height: 2.2rem;
    margin-top: 0.3rem;
    -webkit-line-clamp: 2;
  }
}

@media (max-width:48em) {
  .c0 {
    padding: 0 1.6rem;
    height: 10.4rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <a
        className="c2"
        href="/details/books/book-slug-1"
      >
        <svg
          aria-hidden="true"
          className="c3 c4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
          />
        </svg>
        Test Book 1
      </a>
      <h1
        className="c5"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
          }
        }
      />
    </div>
  </div>,
  .c4 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c8 {
  height: 1.6rem;
  width: 1.6rem;
  margin-right: 0.7rem;
  color: #818181;
}

.c11 {
  height: 1.6rem;
  width: 1.6rem;
  margin-right: 0.7rem;
  color: #818181;
}

.c3 {
  height: 1.6rem;
  width: 1.6rem;
  margin-right: 0.7rem;
}

.c5 {
  font-family: Helvetica Neue;
  font-size: 1.6rem;
  line-height: 2.5rem;
  cursor: pointer;
  margin: 0;
}

.c2 {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:hover {
  color: #0064A0;
}

.c1 {
  height: 5rem;
  max-width: 117rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4rem;
  border-bottom: solid 0.1rem #424242;
}

.c9 {
  font-family: Helvetica Neue;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #424242;
  height: 2.5rem;
  border: none;
  outline: none;
}

.c9::-webkit-input-placeholder {
  color: #818181;
}

.c9::-moz-placeholder {
  color: #818181;
}

.c9:-ms-input-placeholder {
  color: #818181;
}

.c9::placeholder {
  color: #818181;
}

.c10 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  font-family: Helvetica Neue;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #818181;
  margin: 0;
}

.c6 {
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 100%;
  padding: 0 15.5rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.14);
  display: block;
  background: #fff;
}

@media (max-width:48em) {
  .c1 {
    height: 4rem;
  }
}

@media (max-width:48em) {
  .c7 {
    border: none;
    margin-right: 1rem;
  }
}

@media (max-width:48em) {
  .c9 {
    display: none;
  }
}

@media (max-width:48em) {
  .c12 {
    display: none;
  }
}

@media (max-width:48em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <svg
          aria-hidden="true"
          className="c3 c4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 512 512"
        >
          <path
            d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
            fill="currentColor"
          />
        </svg>
        <h3
          className="c5"
        >
          Table of contents
        </h3>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <svg
            aria-hidden="true"
            className="c8 c4"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
            />
          </svg>
          <input
            className="c9"
            placeholder="Search this book"
          />
        </div>
        <div
          className="c10"
        >
          <svg
            aria-hidden="true"
            className="c11 c4"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M448 192V77.25c0-8.49-3.37-16.62-9.37-22.63L393.37 9.37c-6-6-14.14-9.37-22.63-9.37H96C78.33 0 64 14.33 64 32v160c-35.35 0-64 28.65-64 64v112c0 8.84 7.16 16 16 16h48v96c0 17.67 14.33 32 32 32h320c17.67 0 32-14.33 32-32v-96h48c8.84 0 16-7.16 16-16V256c0-35.35-28.65-64-64-64zm-64 256H128v-96h256v96zm0-224H128V64h192v48c0 8.84 7.16 16 16 16h48v96zm48 72c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z"
              fill="currentColor"
            />
          </svg>
          <h3
            className="c12"
          >
            Print options
          </h3>
        </div>
      </div>
    </div>
  </div>,
  .c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 50px;
  font-size: 18px;
  font-family: "Noto Sans";
}

.c6 * {
  overflow: initial;
}

.c1 {
  overflow-x: hidden;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: white;
  min-width: 300px;
}

.c2 {
  position: fixed;
  height: 40px;
  width: 40px;
  margin-top: 10px;
  background: none;
  padding: 0;
  border: none;
  z-index: 1;
  outline: none;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  left: 240px;
}

.c2 span {
  width: 100%;
  background-color: #000;
  padding-top: 10%;
  display: block;
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.c2 span:nth-child(1) {
  -webkit-transform: rotateZ(45deg);
  -ms-transform: rotateZ(45deg);
  transform: rotateZ(45deg);
}

.c2 span:nth-child(2) {
  opacity: 0;
}

.c2 span:nth-child(3) {
  -webkit-transform: rotateZ(-45deg);
  -ms-transform: rotateZ(-45deg);
  transform: rotateZ(-45deg);
  margin-top: -20%;
}

.c3 {
  position: fixed;
  left: 0;
  height: 100%;
  padding-top: 10px;
  width: 300px;
  overflow-y: auto;
  font-size: 15px;
  padding: 10px;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

.c3 ol {
  padding-inline-start: 10px;
}

.c3 > * {
  -webkit-transition-property: visibility;
  transition-property: visibility;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  visibility: visible;
}

.c4 {
  list-style: none;
}

.c5 {
  list-style: none;
  overflow: visible;
  position: relative;
}

.c5:before {
  font-weight: bold;
  content: '>';
  position: absolute;
  right: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media (max-width:600px) {
  .c6 {
    min-width: 300px;
    padding: 0;
  }
}

@media (min-width:601px) {
  .c6 {
    min-width: 350px;
    padding: 0 50px;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <button
        aria-label="Click to close the Table of Contents"
        className="c2"
        onClick={[Function]}
        role="button"
      >
        <span />
        <span />
        <span />
      </button>
      <div
        className="c3"
      >
        <nav>
          <ol>
            <li
              className="c4"
            >
              <a
                href="#"
              >
                book details
              </a>
            </li>
          </ol>
        </nav>
        <div>
          <h2>
            Table of Contents
          </h2>
          <nav>
            <ol>
              <li
                className="c4"
              >
                <a
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-text\\">Test Page 1</span>",
                    }
                  }
                  href="test-page-1"
                  onClick={[Function]}
                />
              </li>
              <li
                className="c4"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 1</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c4"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 2</span>",
                          }
                        }
                        href="1-test-page-2"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c4"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 2</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c4"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 3</span>",
                          }
                        }
                        href="1-test-page-3"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c4"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 3</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      aria-label="Current Page"
                      className="c5"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
                          }
                        }
                        href="1-test-page-4"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c4"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 4</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c4"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 5</span>",
                          }
                        }
                        href="1-test-page-5"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c4"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 5</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c4"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 6</span>",
                          }
                        }
                        href="1-test-page-6"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
              <li
                className="c4"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 6</span>",
                    }
                  }
                />
                <nav>
                  <ol>
                    <li
                      className="c4"
                    >
                      <a
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 7</span>",
                          }
                        }
                        href="1-test-page-7"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </nav>
              </li>
            </ol>
          </nav>
        </div>
      </div>
    </div>
    <div
      className="c6"
      id="main-content"
      tabIndex={-1}
    >
      <div
        className=""
      >
        <div
          data-type="chapter"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<div xmlns:m=\\"http://www.w3.org/1998/Math/MathML\\" xmlns:ns2=\\"urn:oasis:names:tc:opendocument:xmlns:xsl-fo-compatible:1.0\\" class=\\"introduction\\" data-cnxml-to-html-ver=\\"1.3.2\\" data-type=\\"page\\" id=\\"1d1fd537-77fb-4eac-8a8a-60bbaa747b6d\\">this is a test page</div>",
              }
            }
            data-type="page"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`content renders empty state 1`] = `
Array [
  .c0 {
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  margin: 0;
  position: absolute;
  left: 0;
  top: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  -webkit-clip: auto;
  clip: auto;
  height: auto;
  width: auto;
  z-index: 20;
}

<a
    className="c0"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 5rem;
  max-width: 117rem;
  background: #fff;
  margin: 0 auto;
}

.c2 {
  width: auto;
  height: 3rem;
}

.c3 {
  font-size: 1.8rem;
  line-height: 2.5rem;
  -webkit-letter-spacing: -0.04rem;
  -moz-letter-spacing: -0.04rem;
  -ms-letter-spacing: -0.04rem;
  letter-spacing: -0.04rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: Helvetica Neue;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: bold;
  color: #5E6062;
  padding: 1rem 0;
  height: 5rem;
  overflow: visible;
}

.c3:hover,
.c3:active,
.c3:focus {
  border-bottom: 0.4rem solid #63a524;
}

.c0 {
  padding: 0 13.5rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.1);
}

@media (max-width:48em) {
  .c1 {
    height: 3.6rem;
  }
}

@media (max-width:48em) {
  .c2 {
    height: 2rem;
  }
}

@media (max-width:48em) {
  .c3 {
    font-size: 1.6rem;
    line-height: 1.6rem;
  }
}

@media (max-width:48em) {
  .c3 {
    height: 3.6rem;
  }
}

@media (max-width:48em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <a
        className=""
        href="/"
      >
        <img
          alt="OpenStax Logo"
          className="c2"
          src="logo.svg"
        />
      </a>
      <a
        className="c3"
        href="https://accounts-dev.openstax.org/login"
      >
        Login
      </a>
    </div>
  </div>,
  .c0 {
  z-index: 2;
  top: 0;
  overflow: visible;
}

@media (max-width:600px) {
  .c0 {
    position: -webkit-sticky;
    position: sticky;
  }
}

@media (min-width:601px) {
  .c0 {
    position: fixed;
    right: 0;
  }
}

<div
    className="c0"
  />,
  .c4 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c8 {
  height: 1.6rem;
  width: 1.6rem;
  margin-right: 0.7rem;
  color: #818181;
}

.c11 {
  height: 1.6rem;
  width: 1.6rem;
  margin-right: 0.7rem;
  color: #818181;
}

.c3 {
  height: 1.6rem;
  width: 1.6rem;
  margin-right: 0.7rem;
}

.c5 {
  font-family: Helvetica Neue;
  font-size: 1.6rem;
  line-height: 2.5rem;
  cursor: pointer;
  margin: 0;
}

.c2 {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:hover {
  color: #0064A0;
}

.c1 {
  height: 5rem;
  max-width: 117rem;
  margin: 0 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-right: 4rem;
  border-bottom: solid 0.1rem #424242;
}

.c9 {
  font-family: Helvetica Neue;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #424242;
  height: 2.5rem;
  border: none;
  outline: none;
}

.c9::-webkit-input-placeholder {
  color: #818181;
}

.c9::-moz-placeholder {
  color: #818181;
}

.c9:-ms-input-placeholder {
  color: #818181;
}

.c9::placeholder {
  color: #818181;
}

.c10 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  font-family: Helvetica Neue;
  font-size: 1.6rem;
  line-height: 2.5rem;
  color: #818181;
  margin: 0;
}

.c6 {
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 100%;
  padding: 0 15.5rem;
  box-shadow: 0 0.2rem 0.2rem 0 rgba(0,0,0,0.14);
  display: block;
  background: #fff;
}

@media (max-width:48em) {
  .c1 {
    height: 4rem;
  }
}

@media (max-width:48em) {
  .c7 {
    border: none;
    margin-right: 1rem;
  }
}

@media (max-width:48em) {
  .c9 {
    display: none;
  }
}

@media (max-width:48em) {
  .c12 {
    display: none;
  }
}

@media (max-width:48em) {
  .c0 {
    padding: 0 1.6rem;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <svg
          aria-hidden="true"
          className="c3 c4"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 512 512"
        >
          <path
            d="M3.263 139.527c0-7.477 3.917-11.572 11.573-11.572h15.131V88.078c0-5.163.534-10.503.534-10.503h-.356s-1.779 2.67-2.848 3.738c-4.451 4.273-10.504 4.451-15.666-1.068l-5.518-6.231c-5.342-5.341-4.984-11.216.534-16.379l21.72-19.938C32.815 33.602 36.732 32 42.785 32H54.89c7.656 0 11.749 3.916 11.749 11.572v84.384h15.488c7.655 0 11.572 4.094 11.572 11.572v8.901c0 7.477-3.917 11.572-11.572 11.572H14.836c-7.656 0-11.573-4.095-11.573-11.572v-8.902zM2.211 304.591c0-47.278 50.955-56.383 50.955-69.165 0-7.18-5.954-8.755-9.28-8.755-3.153 0-6.479 1.051-9.455 3.852-5.079 4.903-10.507 7.004-16.111 2.451l-8.579-6.829c-5.779-4.553-7.18-9.805-2.803-15.409C13.592 201.981 26.025 192 47.387 192c19.437 0 44.476 10.506 44.476 39.573 0 38.347-46.753 46.402-48.679 56.909h39.049c7.529 0 11.557 4.027 11.557 11.382v8.755c0 7.354-4.028 11.382-11.557 11.382h-67.94c-7.005 0-12.083-4.028-12.083-11.382v-4.028zM5.654 454.61l5.603-9.28c3.853-6.654 9.105-7.004 15.584-3.152 4.903 2.101 9.63 3.152 14.359 3.152 10.155 0 14.358-3.502 14.358-8.23 0-6.654-5.604-9.106-15.934-9.106h-4.728c-5.954 0-9.28-2.101-12.258-7.88l-1.05-1.926c-2.451-4.728-1.226-9.806 2.801-14.884l5.604-7.004c6.829-8.405 12.257-13.483 12.257-13.483v-.35s-4.203 1.051-12.608 1.051H16.685c-7.53 0-11.383-4.028-11.383-11.382v-8.755c0-7.53 3.853-11.382 11.383-11.382h58.484c7.529 0 11.382 4.027 11.382 11.382v3.327c0 5.778-1.401 9.806-5.079 14.183l-17.509 20.137c19.611 5.078 28.716 20.487 28.716 34.845 0 21.363-14.358 44.126-48.503 44.126-16.636 0-28.192-4.728-35.896-9.455-5.779-4.202-6.304-9.805-2.626-15.934zM144 132h352c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h352c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H144c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
            fill="currentColor"
          />
        </svg>
        <h3
          className="c5"
        >
          Table of contents
        </h3>
      </div>
      <div
        className="c6"
      >
        <div
          className="c7"
        >
          <svg
            aria-hidden="true"
            className="c8 c4"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
            />
          </svg>
          <input
            className="c9"
            placeholder="Search this book"
          />
        </div>
        <div
          className="c10"
        >
          <svg
            aria-hidden="true"
            className="c11 c4"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M448 192V77.25c0-8.49-3.37-16.62-9.37-22.63L393.37 9.37c-6-6-14.14-9.37-22.63-9.37H96C78.33 0 64 14.33 64 32v160c-35.35 0-64 28.65-64 64v112c0 8.84 7.16 16 16 16h48v96c0 17.67 14.33 32 32 32h320c17.67 0 32-14.33 32-32v-96h48c8.84 0 16-7.16 16-16V256c0-35.35-28.65-64-64-64zm-64 256H128v-96h256v96zm0-224H128V64h192v48c0 8.84 7.16 16 16 16h48v96zm48 72c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z"
              fill="currentColor"
            />
          </svg>
          <h3
            className="c12"
          >
            Print options
          </h3>
        </div>
      </div>
    </div>
  </div>,
  .c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: 50px;
  font-size: 18px;
  font-family: "Noto Sans";
}

.c5 * {
  overflow: initial;
}

.c1 {
  overflow-x: hidden;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: white;
  min-width: 300px;
}

.c2 {
  position: fixed;
  height: 40px;
  width: 40px;
  margin-top: 10px;
  background: none;
  padding: 0;
  border: none;
  z-index: 1;
  outline: none;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
  left: 240px;
}

.c2 span {
  width: 100%;
  background-color: #000;
  padding-top: 10%;
  display: block;
  visibility: visible;
  opacity: 1;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.c2 span:nth-child(1) {
  -webkit-transform: rotateZ(45deg);
  -ms-transform: rotateZ(45deg);
  transform: rotateZ(45deg);
}

.c2 span:nth-child(2) {
  opacity: 0;
}

.c2 span:nth-child(3) {
  -webkit-transform: rotateZ(-45deg);
  -ms-transform: rotateZ(-45deg);
  transform: rotateZ(-45deg);
  margin-top: -20%;
}

.c3 {
  position: fixed;
  left: 0;
  height: 100%;
  padding-top: 10px;
  width: 300px;
  overflow-y: auto;
  font-size: 15px;
  padding: 10px;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  -webkit-transform: translateX(0px);
  -ms-transform: translateX(0px);
  transform: translateX(0px);
}

.c3 ol {
  padding-inline-start: 10px;
}

.c3 > * {
  -webkit-transition-property: visibility;
  transition-property: visibility;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
  visibility: visible;
}

.c4 {
  list-style: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media (max-width:600px) {
  .c5 {
    min-width: 300px;
    padding: 0;
  }
}

@media (min-width:601px) {
  .c5 {
    min-width: 350px;
    padding: 0 50px;
  }
}

<div
    className="c0"
  >
    <div
      className="c1"
    >
      <button
        aria-label="Click to close the Table of Contents"
        className="c2"
        onClick={[Function]}
        role="button"
      >
        <span />
        <span />
        <span />
      </button>
      <div
        className="c3"
      >
        <nav>
          <ol>
            <li
              className="c4"
            >
              <a
                href="#"
              >
                book details
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <div
      className="c5"
      id="main-content"
      tabIndex={-1}
    >
      <div
        className=""
      >
        <div
          data-type="chapter"
        >
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "",
              }
            }
            data-type="page"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;
